# tix-server

./: .gitignore  CMakeLists.txt  COMMENTS.md  MODEL.md  README.md  mips.toolchain.cmake  tmp_protocol
docs/: 00_common.md  01_how_to_install_axis_sdk_in_vm.md  01_main.md  03_how_to_build_opencv.md  05_how_to_install_wsl.md  06_how_to_install_lima.md  06_how_to_install_lima_old.md  11_how_to_install_axis_sdk_in_vm.md  40_how_to_work_makefile.axis.md  80_how_to_get_hikvision_sdk.md  80_how_to_install_hikvision_sdk_in_vm.md  81_addition.md  81_drafts.md  90_arch_for_some_camera.md  90_tixerver_for_any_camera.md  COMMENTS.md  COMMENTS_tmp.md  DEFAULTS.md  MODEL.md  how-to-build-libevent.md  how-to-build-opencv.md  how_to_build_opencv.md
sh/: create-package.sh  create-package.sh.corrected  eap-create.sh  eap-create.sh.corrected  eap-install.sh  eap-install.sh.orig  heop_devel_run_fixed.sh
src/: CMakeLists.txt  main.cpp
src_event_axis/: .169.254.211.121-var_log_messages.old  .169.254.211.121-var_log_messages.txt  .eap-install.cfg  .target-makefrag  Server01_1_0-0_mipsisa32r2el.eap  algo_params.hpp  app300_context.hpp  app_context.hpp  camera_info.cpp  camera_info.hpp  capture_axis.cpp  capture_axis.hpp  capture_base.hpp  capture_config.hpp  capture_stub.hpp  capturehandler.cpp  capturehandler.hpp  command300_processor.cpp  command300_processor.hpp  command_processor.cpp  command_processor.hpp  config_parser.cpp  config_parser.hpp  datastructs.cpp  datastructs.hpp  defaults.hpp  main.cpp  main2.cpp  main300.cpp  makefile  makefile.prev  makefile.prev2  makefile.simple  (+17 more)
(+274 files in other folders)
